--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -140,6 +140,8 @@ Lint/EmptyBlock: # (new in 1.1)
   Enabled: true
 Lint/EmptyClass: # (new in 1.3)
   Enabled: true
+Lint/EmptyInPattern: # (new in 1.16)
+  Enabled: true
 Lint/LambdaWithoutLiteralBlock: # (new in 1.8)
   Enabled: true
 Lint/NoReturnInBeginEndBlocks: # (new in 1.2)
@@ -174,9 +176,15 @@ Style/HashExcept: # (new in 1.7)
   Enabled: true
 Style/IfWithBooleanLiteralBranches: # (new in 1.9)
   Enabled: true
+Style/InPatternThen: # (new in 1.16)
+  Enabled: true
+Style/MultilineInPatternThen: # (new in 1.16)
+  Enabled: true
 Style/NegatedIfElseCondition: # (new in 1.2)
   Enabled: true
 Style/NilLambda: # (new in 1.3)
+  Enabled: true
+Style/QuotedSymbols: # (new in 1.16)
   Enabled: true
 Style/RedundantArgument: # (new in 1.4)
   Enabled: true
@@ -184,16 +192,25 @@ Style/StringChars: # (new in 1.12)
   Enabled: true
 Style/SwapValues: # (new in 1.1)
   Enabled: true
-
+RSpec/IdenticalEqualityAssertion: # (new in 2.4)
+  Enabled: true
+RSpec/Rails/AvoidSetupHook: # (new in 2.4)
+  Enabled: true
 Rails/ActiveRecordCallbacksOrder: # (new in 2.7)
+  Enabled: true
+Rails/AddColumnIndex: # (new in 2.11)
   Enabled: true
 Rails/AfterCommitOverride: # (new in 2.8)
   Enabled: true
 Rails/AttributeDefaultBlockValue: # (new in 2.9)
   Enabled: true
-Rails/EnvironmentVariableAccess: # (new in 2.10)
+Rails/EagerEvaluationLogMessage: # (new in 2.11)
+  Enabled: true
+Rails/ExpandedDateRange: # (new in 2.11)
   Enabled: true
 Rails/FindById: # (new in 2.7)
+  Enabled: true
+Rails/I18nLocaleAssignment: # (new in 2.11)
   Enabled: true
 Rails/Inquiry: # (new in 2.7)
   Enabled: true
@@ -216,6 +233,8 @@ Rails/ShortI18n: # (new in 2.7)
 Rails/SquishedSQLHeredocs: # (new in 2.8)
   Enabled: true
 Rails/TimeZoneAssignment: # (new in 2.10)
+  Enabled: true
+Rails/UnusedIgnoredColumns: # (new in 2.11)
   Enabled: true
 Rails/WhereEquals: # (new in 2.9)
   Enabled: true
