add new cops and autocorrect

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -298,3 +298,8 @@ Rails/RedundantTravelBack: # new in 2.12
   Enabled: true
 Rails/RootJoinChain: # new in 2.13
   Enabled: true
+
+RSpec/BeEq: # new in 2.9.0
+  Enabled: true
+RSpec/BeNil: # new in 2.9.0
+  Enabled: true
