--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -130,6 +130,9 @@ Style/ClassVars:
 Style/NumericPredicate:
   Enabled: false
 
+Style/ReturnNil:
+  Enabled: true
+
 # New cops
 Gemspec/DateAssignment: # (new in 1.10)
   Enabled: true
