--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,8 @@ jobs:
         name: Wait for DB
         command: dockerize -wait tcp://localhost:3306 -timeout 1m
     - run:
-        name: Prepare DB for tests
-        command: bin/rails db:reset
+        name: Database setup
+        command: bin/rails db:test:prepare
     - run:
         name: Setup Code Climate test-reporter
         command: |
