--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -134,7 +134,7 @@ Style/ReturnNil:
   Enabled: true
 
 # New cops
-Gemspec/DateAssignment: # (new in 1.10)
+Gemspec/DeprecatedAttributeAssignment: # (new in 1.10)
   Enabled: true
 Layout/SpaceBeforeBrackets: # (new in 1.7)
   Enabled: true
